--- a/.github/workflows/notion_automation.yml
+++ b/.github/workflows/notion_automation.yml
@@ -3,7 +3,7 @@ name: Notion Automation
 on:
   schedule:
     - cron: '0 7 * * *'  # Runs at 5am UTC daily
-
+  workflow_dispatch:  
 jobs:
   run-script:
     runs-on: ubuntu-latest
